--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
+/* ============= VARIABLES ============= */
 :root{
     --background-color: #002C5F;
     --foreground-color: #24557F;
 }
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -13,18 +15,28 @@ header {
     background-color: var(--background-color);
     color: #fff;
     text-align: center;
-    padding: 1em;
-}
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: var(--background-color);
-    overflow: hidden;
+    padding-bottom: 1em;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
+/* ============= NAVBAR ============= */
+/* Pourquoi on est obligé de mettre le type devant la classe uniquement pour les 'ul' et les autres ça fonctione ?? */
+ul.navbar {
+    list-style-type: none;
+    background-color: var(--background-color);
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar li {
     float: left;
-    display: block;
+    margin: 0;
+    padding: 0;
+    display: inline-flex;
+}
+
+.navbar li > a {
+    display: inline;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
@@ -32,34 +44,71 @@ header {
     font-size: 17px;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: var(--background-color);
-}
-
-/* Add an active class to highlight the current page */
-.topnav a.active {
+.navbar a:hover, a.active {
     background-color: var(--foreground-color);
     color: white;
 }
 
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-    display: none;
+/* ============= SOCIALS ============= */
+ul.socials {
+    list-style: none;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
 }
 
+li.socials {
+    margin: 0;
+    padding: 0;
+}
+
+a.socials {
+    display: inline-flex;
+    height: 50px;
+    margin: 0;
+}
+
+/* Thanks css-tricks, it worked, before... */
+.icon {
+    box-sizing: border-box;
+    position: relative;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    margin: 0;
+}
+
+/* ============= TWO SIDE BY SIDE CHILDREN ============= */
+.twosides {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+/* ============= CONTACT FORM ============= */
+form{
+    box-sizing: border-box;
+    flex: 0 0 65%;
+    max-width: 600px;
+    padding: 0 20px 10px 20px;
+    border: solid var(--background-color);
+}
+
+/* ============= RESPONSIVE FEATURES ============= */
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
         float: right;
         display: block;
     }
+    .twosides{
+        flex-direction: column;
+    }
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive a.icon {
         position: absolute;
@@ -73,23 +122,16 @@ header {
     }
 }
 
-img{
-    padding-top: 10vh;
-    max-width: 600px;
-    position: relative;
-    vertical-align: middle;
-    display: inline;
-    flex: 0 0 50%;
-}
-
+/* ============= PRETTY SECTIONS ============= */
 section {
-    max-width: 80%;
+    max-width: 90%;
     margin: 20px auto;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+/* ============= CONTACT FORMS INPUTS ============= */
 input, textarea{
     display: block;
     width: 100%;
@@ -114,16 +156,10 @@ input[type=submit]:hover{
     background: var(--foreground-color);
 }
 
-form{
-    box-sizing: border-box;
-    float: left;
-    flex: 0 0 65%;
-    max-width: 600px;
-    padding: 20px;
-    border: solid var(--background-color);
-}
-
+/* ============= FOOTER ============= */
 footer {
+    display: flex;
+    flex-direction: column;
     text-align: center;
     padding: 1em;
     background-color: #333;
