--- a/styles.css
+++ b/styles.css
@@ -63,15 +63,15 @@ li.socials {
 }
 
 a.socials {
-    display: inline-flex;
+    display: flex;
+    align-items: center;
     height: 50px;
     margin: 0;
 }
 
-/* Thanks css-tricks, it worked, before... */
+/* Thanks css-tricks */
 .icon {
     box-sizing: border-box;
-    position: relative;
     width: 50px;
     height: 50px;
     padding: 0;
